Additional file path name fix for problem with images in github pages not showing.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -195,7 +195,7 @@ hr {
 /* event times*/
 
 #times {
-    background-image: url('/images/dublin-city.webp'); 
+    background-image: url('../../images/dublin-city.webp'); 
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
